# functions_core_lib

./: .gitignore  README.md  TODO.md  pyproject.toml  scrap.py
.github/workflows/: publish.yml
src/functions_core_lib/: __init__.py
src/functions_core_lib/functions/: stripe_create_customer.py  stripe_delete_customer.py
src/functions_core_lib/stripe/: client.py  exceptions.py  logger.py  response_types.py  stripe_client.py  types.py
test/: stripe_client_test.py
