[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mainttracker_functions_core_lib"
version = "0.2.0"
description = "Lib containing core python for google cloud functions"
authors = [{ name = "Sean Cahill", email = "sjoscahill@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">= 3.11"
dependencies = ["loguru>=0.7.3", "stripe>=11.5.0"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
pythonpath = [".", "src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["test"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "dotenv"]
